# PortfolioAdviser

./: .dockerignore  .env.example  Makefile  README.md  pyproject.toml
.cursor/rules/: monorepo-scaffold.mdc  project.mdc  testing.mdc  web-architecture.mdc  workflow.mdc
.github/workflows/: ci.yml
docs/: architecture.md  openclaw-bringup-and-connection.md  openclaw-integration.md  overall-architecture.md  service-contracts.md  testing-strategy.md
infra/: docker-compose.yml
openclaw/skills/market-live/: README.md  SKILL.md
openclaw/skills/stocklake/: README.md  SKILL.md
scripts/: bootstrap-service-venv.sh  bringup-openclaw.sh  dev-compose.sh  smoke_gateway.py
services/analytics/: README.md  pyproject.toml
services/analytics/app/: config.py  duckdb_connect.py  main.py  models.py
services/analytics/notebooks/: explore.ipynb
services/analytics/tests/: conftest.py  factories.py  test_analytics_smoke.py
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: config.py  dependencies.py  errors.py  main.py  models.py  service.py
services/api-gateway/app/clients/: __init__.py  datalake.py  market_live.py
services/api-gateway/app/routes/: health.py  v1.py
services/api-gateway/notebooks/: explore.ipynb
services/api-gateway/tests/: __init__.py  conftest.py  factories.py  helpers.py  test_api_gateway_smoke.py
services/api-gateway/tests/e2e/: test_gateway_flows.py
services/api-gateway/tests/integration/: test_datalake_adapter_integration.py  test_market_live_adapter_integration.py
services/api-gateway/tests/unit/: test_datalake_adapter.py  test_market_live_adapter.py  test_service_mapping.py
services/datalake/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/datalake/alembic/: env.py
services/datalake/alembic/versions/: 20260314_0001_create_core_tables.py
services/datalake/app/: __init__.py  config.py
services/datalake/app/api/: main.py
services/datalake/app/db/: engine.py  models.py
services/datalake/app/repositories/: __init__.py  bars.py  tickers.py
services/datalake/app/repositories/impl/: __init__.py  bars_sql.py
services/datalake/app/services/: __init__.py  backfill_service.py  bar_ingestion_service.py  stocklake_service.py  ticker_service.py  tiingo_client.py
services/datalake/app/services/impl/: __init__.py  backfill_logic.py  bar_ingestion_logic.py  date_ranges.py  stocklake_logic.py  ticker_logic.py  tiingo_mapping.py
services/datalake/notebooks/: explore.ipynb
services/datalake/tests/: __init__.py  conftest.py  factories.py  test_datalake_smoke.py
services/datalake/tests/api/: test_bars.py  test_tickers.py
services/datalake/tests/integration/: test_bar_repository.py  test_ticker_repository.py
services/datalake/tests/unit/: test_date_ranges.py  test_tiingo_mapping.py
services/market-live/: Dockerfile  README.md  pyproject.toml
services/market-live/app/: __init__.py  config.py  models.py
services/market-live/app/api/: __init__.py  main.py
services/market-live/app/services/: __init__.py  current_service.py  mapping.py  tiingo_client.py
services/market-live/notebooks/: explore.ipynb
services/market-live/tests/: __init__.py  conftest.py  factories.py  test_market_live_smoke.py
services/market-live/tests/api/: test_current.py
services/market-live/tests/unit/: test_current_service.py  test_mapping.py
services/mcp-market-live/: Dockerfile  README.md  pyproject.toml
services/mcp-market-live/mcp_market_live/: __init__.py  __main__.py  config.py  market_live_client.py  server.py  tools.py
services/mcp-market-live/notebooks/: explore.ipynb
services/mcp-stocklake/: README.md  pyproject.toml
services/mcp-stocklake/mcp_stocklake/: __init__.py  __main__.py  datalake_runtime.py  datalake_service.py  env_checks.py  server.py  tools.py
services/mcp-stocklake/notebooks/: explore.ipynb
services/mcp-stocklake/tests/: conftest.py  test_e2e_tool_flow.py  test_mcp_stocklake_smoke.py  test_tools_integration.py  test_tools_unit.py
services/screener/: README.md  pyproject.toml
services/screener/app/: config.py  duckdb_connect.py  main.py  mcp_tools.py  models.py  presets.py
services/screener/app/adapters/: __init__.py  current_market.py  datalake.py
services/screener/app/services/: __init__.py  engine.py  rules.py
services/screener/notebooks/: explore.ipynb
services/screener/tests/: __init__.py  conftest.py  factories.py  test_screener_smoke.py
services/screener/tests/e2e/: test_screen_api_e2e.py
services/screener/tests/integration/: test_current_market_adapter_integration.py  test_screener_engine_integration.py
services/screener/tests/unit/: test_engine_unit.py  test_rule_evaluators.py
web/: README.md
(+17 files in other folders)
