[project]
name = "stocklake-monorepo"
version = "0.0.0"
description = "PortfolioAdviser monorepo workspace (uv)"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/stocklake-tiingo",
  "services/datalake",
  "services/market-live",
  "services/mcp-stocklake",
]

[tool.uv.sources]
stocklake-tiingo = { workspace = true }
