[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklake-datalake"
version = "0.1.0"
description = "Tiingo EOD datalake service for stock platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.0",
  "orjson>=3.10.0",
  "alembic>=1.13.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that require Docker Postgres",
]
