[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklake-market-live"
version = "0.1.0"
description = "Live market data service for current bars"
requires-python = ">=3.11"
dependencies = [
  "stocklake-tiingo",
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "orjson>=3.10.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that require live market provider credentials",
]
