[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stocklake-screener"
version = "0.1.0"
description = "Rule-based stock screener service over canonical market history"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "duckdb>=1.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "orjson>=3.10.0",
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that validate canonical data adapter boundaries",
  "e2e: end-to-end tests for screener request and response workflow",
]
